# clean-data

./: README.md  pyproject.toml  requirements.txt
src/clean_data.egg-info/: PKG-INFO  SOURCES.txt
src/clean_data_tools/: __init__.py  normalizer.py
src/clean_data_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cleandata/: cleaner.py  outlier.py  utils.py
